--- a/src/constant/style/animations.css
+++ b/src/constant/style/animations.css
@@ -11,7 +11,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  margin-left: 50% !important;
+  transform: translateX(-50%);
   opacity: 1;
 }
 
